[gd_scene load_steps=6 format=2]

[ext_resource path="res://Microgames/Floppy/floppy.png" type="Texture" id=1]
[ext_resource path="res://Microgames/Floppy/Floppy.gd" type="Script" id=2]
[ext_resource path="res://Microgames/Floppy/Obstacle.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 30, 30 )

[sub_resource type="Animation" id=2]
resource_name = "slide_obstacles"
length = 12.0
tracks/0/type = "value"
tracks/0/path = NodePath("ObstacleContainer:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1100, 0 ), Vector2( -3000, 0 ) ]
}

[node name="Floppy" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="ObstacleContainer" type="Node2D" parent="."]
position = Vector2( 758.333, 0 )

[node name="Obstacle1" parent="ObstacleContainer" instance=ExtResource( 3 )]

[node name="Obstacle2" parent="ObstacleContainer" instance=ExtResource( 3 )]
position = Vector2( 400, 0 )

[node name="Obstacle3" parent="ObstacleContainer" instance=ExtResource( 3 )]
position = Vector2( 800, 0 )

[node name="Obstacle4" parent="ObstacleContainer" instance=ExtResource( 3 )]
position = Vector2( 1200, 0 )

[node name="Obstacle5" parent="ObstacleContainer" instance=ExtResource( 3 )]
position = Vector2( 1600, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slide_obstacles = SubResource( 2 )
[connection signal="body_entered" from="ObstacleContainer/Obstacle1" to="." method="obstacle_hit"]
[connection signal="body_entered" from="ObstacleContainer/Obstacle2" to="." method="obstacle_hit"]
[connection signal="body_entered" from="ObstacleContainer/Obstacle3" to="." method="obstacle_hit"]
[connection signal="body_entered" from="ObstacleContainer/Obstacle4" to="." method="obstacle_hit"]
[connection signal="body_entered" from="ObstacleContainer/Obstacle5" to="." method="obstacle_hit"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="obstacles_cleared"]
